# QuantumOperatorEqualityChecker

./: .gitignore  QuantumEquationChecker.cabal  QuantumEquationChecker.leo  QuantumOperatorEqualityChecker.cabal  QuantumOperatorEqualityChecker.leo  Setup.hs  Transformers.hs
sources/: DifferentiableFunction.hs  Euclidean3D.hs  Function.hs
sources/Quantum/: Euclidean3D.hs  Function.hs  Testing.hs
sources/Quantum/Function/: Transformers.hs
tests/: test.hs
