-- @+leo-ver=4-thin
-- @+node:gcross.20091204093401.2930:@thin QuantumEquationChecker.cabal
-- @@language Haskell
Name:           QuantumEquationChecker
Version:        0.1
Cabal-Version:  >= 1.6
Build-Type:     Custom

Library
    Build-Depends:  base == 4.1.*,
                    Blueprint >= 0.2,
                    InfixApplicative == 1.*
-- @-node:gcross.20091204093401.2930:@thin QuantumEquationChecker.cabal
-- @-leo
